--- a/css/userbar.css
+++ b/css/userbar.css
@@ -10,7 +10,8 @@
     font-size: 14px;
     font-weight: bold;
     position: relative;
-    left: 620px;
+    left: 310px;
+    width: 402px;
 
 }
 
