--- a/css/userbar.css
+++ b/css/userbar.css
@@ -4,6 +4,9 @@
     position: relative;
     background-color: #66cccc;
 }
+#popup_addgroup {
+    position: absolute;
+}
 
 .eventbuttons {
     height: 50px;
@@ -131,13 +134,14 @@
 #fade {
     display: none;
     background: #000;
-    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     opacity: .60; /* Полупрозрачность элемента */
-    z-index: 9999;
+    z-index: 1;
+    position: absolute;
+    overflow: visible;
 }
 
 .popup_add_block {
@@ -148,7 +152,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 99999;
+    z-index: 1;
     width: 470px;
 }
 
@@ -160,23 +164,11 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 99999;
+    z-index: 1;
     width: 600px;
     height: 600px;
 }
 
-/*--Фиксированное позиционирование для тупого IE6--*/
-* html #fade {
-    position: absolute;
-}
-
-* html #fade {
-    position: absolute;
-}
-
-* html .popup_add_block {
-    position: absolute;
-}
 
 /* Контактная форма */
 .addlabel {
@@ -407,7 +399,7 @@ input[type="submit"]:hover {
 #close_window {
     position: relative;
     float: right;
-    z-index: 99999;
+    z-index: 1;
     height: 30px;
     width: 30px;
     top: -17px;
@@ -445,7 +437,7 @@ input[type="submit"]:hover {
 #close_window_g {
     position: relative;
     float: right;
-    z-index: 99999;
+    z-index: 1;
     height: 30px;
     width: 30px;
     top: -17px;
